<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ok">OK</string>
    <string name="cancel">cancel</string>
    <string name="app_name">TimeCard</string>
    <string name="up">出社</string>
    <string name="down">退社</string>
    <string name="clear">クリア</string>
    <string name="move_start">移動開始</string>
    <string name="move_finish">移動終了</string>
    <string name="confirm">確認</string>
    <string name="clear_msg">ログをクリアしますか？</string>
    <string name="delete_msg">削除しますか？</string>
    <string name="mail">mail</string>
    <string name="set_email_msg">メールアドレスを入力してください</string>
    
    <string name="default_date_text">0000/00/00</string>
    <string name="default_time_text">00:00:00</string>
    <string name="change_date">日時変更</string>
    <string name="change_time">時刻変更</string>
</resources>

