<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="horizontal">
    <Button
        android:id="@+id/up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/up"/>
    <Button
        android:id="@+id/down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/down"/>
    <Button
        android:id="@+id/move_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move_start"/>
    <Button
        android:id="@+id/move_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move_finish"/>
</LinearLayout>
